force-app/main/default/objects/Employee__c/fields/CountOf_Assignments__c.field-meta.xml
<CustomField>
    <fullName>CountOf_Assignments__c</fullName>
    <label>CountOf Assignments</label>
    <summaryForeignKey>Assignment__c.Employee__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>