force-app/main/default/objects/Employee__c/fields/Current_availability__c.field-meta.xml
<CustomField>
    <fullName>Current_availability__c</fullName>
    <description>Status of employee</description>
    <label>Current availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free</fullName>
            </value>
            <value>
                <fullName>Busy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>