force-app/main/default/objects/Employee__c/fields/isFree__c.field-meta.xml
<CustomField>
    <fullName>isFree__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isFree</label>
    <type>Checkbox</type>
</CustomField>