force-app/main/default/objects/Employee__c/recordTypes/Cleaner.recordType-meta.xml
<RecordType>
    <fullName>Cleaner</fullName>
    <active>true</active>
    <label>Cleaner</label>
</RecordType>