force-app/main/default/objects/Employee__c/listViews/Current_employees.listView-meta.xml
<ListView>
    <fullName>Current_employees</fullName>
    <columns>NAME</columns>
    <columns>Current_availability__c</columns>
    <columns>Phone__c</columns>
    <filterScope>Mine</filterScope>
    <label>Current employees</label>
</ListView>